--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="lib/swiper.js"></script>
     <script src="js/script.js" defer></script>
     <title>Flixx</title>
+     <link rel="icon" type="./image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <header class="main-header">
