--- a/tv-details.html
+++ b/tv-details.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/spinner.css" />
     <script src="js/script.js" defer></script>
     <title>Flixx | Show Details</title>
+    <link rel="icon" type="./image/x-icon" href="/images/favicon.ico">
+
   </head>
   <body>
     <header class="main-header">
